# EasyTakeout

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-windows.yml  ci.yml
app/: TakeoutMetadataMergerApp.py
cli/: merge_takeout.py
docs/: ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md
packaging/: inno-setup.iss
tests/: test_json_mapping.py  test_live_pairing.py
